[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DeepInpainting"
version = "0.1.0"
description = "DeepInpainting: DeepInsight-style masked conditional quantile inpainting for incomplete tabular data"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "DeepInpainting project" }
]
dependencies = [
  "numpy>=1.23",
  "scipy>=1.9",
  "scikit-learn>=1.2",
  "torch>=2.0",
  "tqdm>=4.64"
]

[project.optional-dependencies]
umap = ["umap-learn>=0.5"]
examples = ["jupyter>=1.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
deepinpainting = []
